--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -84,7 +84,8 @@
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp"
                 android:gravity="left"
-                android:layout_marginBottom="10dp" />
+                android:layout_marginBottom="10dp"
+                android:textColor="#363636" />
         </LinearLayout>
 
         <LinearLayout
@@ -161,7 +162,8 @@
                 android:gravity="center_horizontal"
                 android:layout_weight="1"
                 android:textSize="13sp"
-                android:layout_margin="7dp" />
+                android:layout_margin="7dp"
+                android:textColor="#363636" />
 
             <TextView
                 android:layout_width="0dp"
@@ -172,7 +174,8 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:textSize="13dp"
-                android:layout_margin="7dp" />
+                android:layout_margin="7dp"
+                android:textColor="#363636" />
 
             <TextView
                 android:layout_width="0dp"
@@ -184,7 +187,8 @@
                 android:gravity="center_horizontal"
                 android:textIsSelectable="false"
                 android:textSize="13dp"
-                android:layout_margin="7dp" />
+                android:layout_margin="7dp"
+                android:textColor="#363636" />
         </LinearLayout>
 
     </LinearLayout>
