--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -19,7 +19,7 @@
         android:id="@+id/PanelOne"
         android:focusableInTouchMode="false"
         android:weightSum="1"
-        android:layout_weight="0.15"
+        android:layout_weight="0.17"
         android:gravity="center_vertical|center_horizontal"
         android:background="#ffdfdfdf">
 
@@ -47,7 +47,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.43"
+        android:layout_weight="0.5"
         android:background="#ff33b5e5"
         android:id="@+id/PanelTwo"
         android:weightSum="1"
@@ -61,19 +61,13 @@
             android:id="@+id/Welcome"
             android:textSize="25sp"
             android:textColor="#ffffffff"
-            android:layout_marginLeft="7dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="7dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_margin="10dp" />
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/PersonalProfile"
-            android:layout_marginLeft="7dp"
-            android:layout_marginRight="7dp"
-            android:layout_marginBottom="10dp">
+            android:id="@+id/PersonalProfile">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -81,11 +75,9 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/personal_information"
                 android:id="@+id/textView"
-                android:layout_marginLeft="2dp"
-                android:layout_marginRight="2dp"
                 android:gravity="left"
-                android:layout_marginBottom="10dp"
-                android:textColor="#363636" />
+                android:textColor="#363636"
+                android:layout_margin="10dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -105,7 +97,7 @@
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
-                android:gravity="bottom"
+                android:gravity="bottom|top"
                 android:layout_weight="0.5">
 
                 <ImageButton
@@ -151,7 +143,8 @@
             android:layout_height="0dp"
             android:gravity="center_horizontal|top"
             android:layout_gravity="bottom"
-            android:layout_weight="0.7">
+            android:layout_weight="1.1"
+            android:id="@+id/MenuTextLabels">
 
             <TextView
                 android:layout_width="0dp"
@@ -192,5 +185,6 @@
         </LinearLayout>
 
     </LinearLayout>
+
 
 </LinearLayout>
