--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -47,7 +47,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"
+        android:layout_weight="0.4"
         android:background="#ff33b5e5"
         android:id="@+id/PanelTwo"
         android:weightSum="1"
@@ -143,7 +143,7 @@
             android:layout_height="0dp"
             android:gravity="center_horizontal|top"
             android:layout_gravity="bottom"
-            android:layout_weight="1.1"
+            android:layout_weight="1.0"
             android:id="@+id/MenuTextLabels">
 
             <TextView
@@ -181,10 +181,17 @@
                 android:textIsSelectable="false"
                 android:textSize="13dp"
                 android:layout_margin="7dp"
-                android:textColor="#363636" />
+                android:textColor="#363636"/>
         </LinearLayout>
 
     </LinearLayout>
 
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.43">
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
