--- a/app/src/main/res/layout/registrationpage.xml
+++ b/app/src/main/res/layout/registrationpage.xml
@@ -11,36 +11,30 @@
         android:layout_height="wrap_content"
         android:padding="10dip"
         android:layout_margin="50dp">
-        <TextView android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#372c24"
-            android:text="Full Name"/>
+
         <EditText android:id="@+id/fullname"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:singleLine="true"
-            android:layout_marginBottom="20dip"/>
-        <TextView android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#372c24"
-            android:text="Email"/>
+            android:layout_marginBottom="20dip"
+            android:hint="Full Name" />
+
         <EditText android:id="@+id/email"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:singleLine="true"
-            android:layout_marginBottom="20dip"/>
-        <TextView android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#372c24"
-            android:text="Password"/>
+            android:layout_marginBottom="20dip"
+            android:hint="Email Address" />
+
         <EditText android:id="@+id/password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:password="true"
             android:singleLine="true"
-            android:layout_marginTop="5dip"/>
+            android:layout_marginTop="5dip"
+            android:hint="Password" />
         <Button android:id="@+id/Register"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
